src/test/deca/codegen/invalid/custom/up_cast.res
/home/damien/Projet_GL/gl28/src/test/deca/codegen/invalid/custom/up_cast.deca:13:8: (3.28) Types A can't be assigned to B
